# payslip-history-manager

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
payslip-history/: rxconfig.py
payslip-history/payslip_history/: payslip_history.py
