[tool.poetry]
name = "payslip-history-manager"
version = "0.1.0"
description = ""
authors = ["haga <haga@ishida.co.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
reflex = "^0.5.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py310"

exclude = [
    ".git",
    ".pytest_cache",
    ".vscode",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = []

extend-ignore = [
    "D100",   # Missing docstring in public module
    "D415",   # First line should end with a period, question mark, or exclamation point
    "ANN101", # Missing type self
]

fixable = ["ALL"]

# 個別設定
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "D104", # Missing docstring in public package
    "F401", # __init__.pyは未使用インポートを許容
]
"**/tests/*" = [
    "S101", # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"
